Fix content not visible due to mobile nav

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -38,6 +38,7 @@ body {
 @media screen and (max-width: 786px) {
   .outlet-wrapper {
     padding-inline: 4%;
+    padding-bottom: 5rem;
   }
 }
 
